# licitacoes-de-feira

./: .firebaserc  .gitignore  Procfile  README.md  crawlers.py  deploy.sh  firebase.json  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
data_collection/: README.md  crawlers.py  pyproject.toml  utils.py
data_collection/bids/: crawlers.py
data_collection/contracts/: brasilio_cache.sqlite  brasilws_cache.sqlite  collect_entities_info.py  consolidate_contracts_info.py  download_contracts.py  entities_data.py  parse_contract.py  utils.py
data_collection/data/: bids.v1.json  functions_and_subfunctions.txt
data_collection/data/bids/: bids.v0.json  bids.v2.json  page.example.json
data_collection/data/contracts/: README.md  city-hall-contracts-2016-2017.xls  contracts-url-feira-de-santana-2016-2017.csv  contracts.json  councilmens.csv  documents-from-contracts.csv  entities.json
data_collection/data/payments/: payments-emp-2010-01-01-2011-01-01-a.xls  payments-emp-2010-01-01-2011-01-01-b.xls  payments-emp-2010-01-01-2011-01-01-c.xls  payments-emp-2010-01-01-2011-01-01-d.xls  payments-emp-2010-01-01-2011-01-01-e.xls  payments-emp-2010-01-01-2011-01-01-f.xls  (+756 more)
data_collection/payments/: collect_payments.py  consolidate_payments.py  to_db.py
data_collection/people/: collect_municipal_employees.py
data_collection/tests/: test_parse_contract.py  test_utils.py
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js  bids.json  bids.v3.json  bids.v4.json  bids.v5.json  bids.v6.json  bids.v7.json
(+224 files in other folders)
