[tool.poetry]
name = "biddings"
version = "0.1.0"
description = "Make biddings from Feira de Santana (Brazil) accessible to everyone."
authors = ["Ana Paula Gomes <apgomes88@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
scrapy = "^1.6"
pandas = "^0.24.1"
requests = "^2.21"
requests-cache = "^0.4.13"
pytest = "^4.3"

[tool.poetry.dev-dependencies]
pytest = "^4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
